# rebug

./: .gitignore  flatten-codebase.txt
server/: .env.example  .gitignore  Cargo.toml  flatten-codebase.txt  output.txt  rebug.db  rebug.db-shm  rebug.db-wal  todo.md
server/.cargo/: config.toml
server/.sqlx/: query-04bcfe3df9bb88300f7b8b54311edad7271cc919f89445e4c91a33d0dec200c8.json  query-08094079f991036b8d63ca5e99b6500bafa68dd2396293acac97a4f6fd65a2f5.json  query-0cd452b4532abaca0f4b066609549cebdd189ea4b9ccba6a1d17277fb172d995.json  query-0f09df33198b57a2a30f03dc90d3ea5e8e843253f360aa8add43ac1076e39a18.json  query-1781d878abb8bfa470bfc6d7ea9d8539dce04c8c130741dc49c1d02bffdf576c.json  query-1945c988f19d6f190b59e2bb80dafb0de278d12651886e973c7db28685508af5.json  query-235f4e198be2fe5e2d3cc0733fdc4d6299b7a85465640126d8bd889c1adbb7e4.json  query-2bcffa93e02c9a5c0b4ee5f499c98f7907500ceeda07ee2a8f627021ba8091a3.json  query-313dcab1ec71d33ba40926d4e9e50ef30c9ca64d610ed4ac81a07f0af7599642.json  query-32a916d5afebb07cf9b3ca626c4330e04d58e68039f61178fea0329d913af696.json  query-3c1ff26292802e75920c702942be972a7c916d21e2df7b39bb23fb798101a384.json  query-411bfae4f73b6d9e18916f9dce91369b98ce3d56ae64d262c1480017d3a6fb47.json  query-45cec35d8b4dce615943cbe2b305783ca3a96975c2256a78ad65f03a25c87922.json  query-4894e19d290429d62369379ad0079522b419e558d384b713da595dfdcd809df9.json  query-491978d8298c685d336444513d6d0b6896eb41aa7887f4c8bcbe7a07776a5a51.json  query-5baf12010c8192c22e9b571d85e6609f6a351a7098fa6e5eaf371ba51e824d09.json  query-71d10f125c21c0eae34e48f8575dc99e7a0936f5b224e0d5cd005a6292df5727.json  query-7f338f4a5946b1a283cbcf7759f13c1c8a5502dce109f152f388e0029452ee73.json  query-840441e48d5107cc0aee8775ac9dace5869a5bdb63f637798a1359eb71b507f3.json  query-8a6f304775bb794bb4fc77a3e1911bc66f0e6d6f3650c3e2f0b72f02be93076b.json  query-a0f2bdb6b3417ca40d3dc7b03e7dadae7b6e9edffd499b0742c92eee3badf0b4.json  query-dcba2fd3501ad8894734c73e3f4b4571c92a00c1fb73f0d76ab907aa8824b2b7.json  query-e622bc4389c2530ecdae544b4fbee347ad09a5240311a6c873821b42b186e39d.json  query-fbc0d9b80af2f42ee44234725dcf6e33af17ca56a618bddbf8833a4cb0bd11e6.json
server/config/: default.toml
server/frontend/: flatten-codebase.txt  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
server/src/: main.rs
(+330 files in other folders)
