[package]
name = "rebug"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
axum = { version = "0.8.4", features = ["multipart"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
bcrypt = "0.17.0"
chrono = { version = "0.4.41", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = "9.3.1"
once_cell = "1.21.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = ["runtime-tokio-rustls", "sqlite", "uuid", "macros", "chrono"] }
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.4", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }
