[package]
name = "rebug"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
axum = { version = "0.8.4", features = ["multipart"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
axum_typed_multipart = "0.16.2"
bcrypt = "0.17.0"
bytes = "1.10.1"
chrono = { version = "0.4.41", features = ["serde"] }
config = { version = "0.15.11", features = ["toml"] }
fast_log = "1.7.7"
jsonwebtoken = "9.3.1"
log = "0.4.27"
mime_guess = "2.0.5"
once_cell = "1.21.3"
rbatis = { version = "4.6.8", features = ["debug_mode"] }
rbdc-sqlite = "4.6.0"
rbs = "4.6.2"
rust-embed = { version = "8.7.2", features = ["compression"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "uuid",
    "macros",
    "chrono",
] }
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }
tower-http = { version = "0.6.4", features = [
    "cors",
    "fs",
    "trace",
    "tracing",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
ts-rs = { version = "10.1.0", features = ["chrono-impl", "uuid", "uuid-impl"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }
